--- a/css/global/header.css
+++ b/css/global/header.css
@@ -1,20 +1,5 @@
-body {
-  margin: 0px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-ul {
-  margin: 0px;
-  padding: 0px;
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
 .header-bg {
-  background-color: #000000;
+  background-color: var(--cor-12);
 }
 
 .header {
@@ -40,6 +25,8 @@ a {
   display: inline-block;
   font-size: 18px;
   position: relative;
+  font-family: "Poppins";
+  font-weight: 400;
 }
 
 .header-menu a:after {
@@ -47,7 +34,7 @@ a {
   display: block;
   height: 2px;
   width: 0px;
-  background-color: #ffffff;
+  background-color: var(--cor-0);
   margin-top: 4px;
   transition: 0.3s;
   position: absolute;
@@ -62,9 +49,12 @@ a {
     gap: 20px;
   }
   .header-menu a {
-    background: #111111;
+    background: var(--cor-11);
     padding: 12px 16px;
     border-radius: 4px;
+  }
+  .header a:hover {
+    background-color: var(--cor-10);
   }
   .header a:after {
     display: none;
