feat: conclusão depoimento da home

--- a/css/global/global.css
+++ b/css/global/global.css
@@ -11,8 +11,12 @@ ul {
 }
 
 h1,
+h2,
+h3,
+h4,
 ul,
-p {
+p,
+blockquote {
   margin: 0px;
 }
 
@@ -24,4 +28,8 @@ a {
 img {
   max-width: 100%;
   display: block;
+}
+
+img[src$=".jpg"] {
+  border-radius: 4px;
 }
