--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -8,12 +8,6 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 0px 40px;
-  max-width: 1200px;
-  box-sizing: border-box;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .introducao-conteudo {
@@ -23,6 +17,7 @@
 
 .introducao img {
   height: 100%;
+  width: 100%;
   object-fit: cover;
 }
 
