--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -1,22 +1,25 @@
+.container {
+  box-sizing: border-box;
+  max-width: 1200px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .botao {
   display: inline-block;
   padding: 16px 32px;
-  border-radius: 5px;
-  background: var(
-    --gradient-L-amarelo,
-    linear-gradient(90deg, #ffc700 0%, #ffa216 100%)
-  );
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1) #fff;
+  background: linear-gradient(#ffbf00, #f2a50c);
+  border-radius: 4px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   text-transform: uppercase;
   color: var(--cor-p5);
-  font: 600 1.125rem/1.35 "Poppins";
+  font: 600 1.125rem/1.35 "Poppins", sans-serif;
 }
 
 .botao:hover {
-  background: var(
-    --gradient-L-amarelo,
-    linear-gradient(90deg, #ffb60d 0%, #e59317 100%)
-  );
+  background: linear-gradient(#ffbf00, #ab6d11);
 }
 
 @media (max-width: 600px) {
@@ -24,4 +27,23 @@
     padding: 12px 16px;
     font-size: 16px;
   }
+}
+
+.link {
+  display: inline-block;
+  color: var(--cor-p1);
+  font: 500 1.5rem/1.5 "Poppins";
+  text-transform: uppercase;
+}
+
+.link::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: currentColor;
+}
+
+.link:hover {
+  color: var(--cor-0);
 }
