--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,9 @@
 
 /* Bicicletas */
 @import "./bicicletas/bicicletas-lista.css";
+
+/* Seguros */
+@import "./seguros/seguros.css";
+
+/* Footer */
+@import "./global/footer.css";
