--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,13 @@
 
 /* Bicicletas */
 @import "./bicicletas/bicicletas-lista.css";
+@import "./bicicletas/bicicletas.css";
 
 /* Seguros */
 @import "./seguros/seguros.css";
 
 /* Footer */
 @import "./global/footer.css";
+
+/* Termos */
+@import "./termos/termos.css";
