--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,8 @@
 
 /* Seguros */
 @import "./seguros/seguros.css";
+@import "./seguros/vantagens.css";
+@import "./seguros/perguntas.css";
 
 /* Footer */
 @import "./global/footer.css";
