--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 /* Utilidades */
 @import "./utilidades/componentes.css";
 @import "./utilidades/cores.css";
+@import "./utilidades/formulario.css";
 
 /* Home */
 @import "./home/introducao.css";
@@ -16,10 +17,21 @@
 @import "./bicicletas/bicicletas-lista.css";
 @import "./bicicletas/bicicletas.css";
 
+/* Bicicleta */
+@import "./bicicleta/bicicleta.css";
+@import "./bicicleta/seguro.css";
+
 /* Seguros */
 @import "./seguros/seguros.css";
 @import "./seguros/vantagens.css";
 @import "./seguros/perguntas.css";
+
+/* Contato */
+@import "./contato/contato.css";
+@import "./contato/lojas.css";
+
+/* Contato */
+@import "./orcamento/orcamento.css";
 
 /* Footer */
 @import "./global/footer.css";
